--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100%;
-  background-color: #edeef0;
+  background-color: #f6f6ff;
   /* background-image: url('../src/assets/img/tile_background.png'); */
   background-position: center;
   background-repeat: no-repeat;
