--- a/src/index.css
+++ b/src/index.css
@@ -126,3 +126,17 @@ button:focus-visible {
   transition: border-color 0.25s;
 }
 
+.editor {
+  margin: 30px -30px;
+
+  :global {
+    .cm-s-easymde {
+      border: 0;
+      font-size: 22px;
+    }
+    .editor-toolbar {
+      border: 0;
+      background-color: rgb(0 0 0 / 2%);
+    }
+  }
+}
