box to divs, fixes

--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,7 @@ button:focus-visible {
 
   a:hover {
     color: #747bff;
+    
   }
 
   button {
@@ -88,6 +89,16 @@ button:focus-visible {
   }
 }
 
+.editProfileBG{
+  display: none;
+}
+
+.profileHeadWrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
 .profileHead {
   padding: 20px;
@@ -97,8 +108,27 @@ button:focus-visible {
   border-radius: 36px;
   background-color: darkgray;
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
+.profileHead:hover .editProfileBG{
+  display: initial;
+}
+
+.profileHead__user{
+  width: 70%;
+  max-width: 1060px;
+  padding: 20px;
+}
+
+.profileHead__user-name
+
+.profileHead__user-avatar{
+  width: 170px;
+  height: 170px;
+}
 
 .itemCard:hover .itemCardType{
   opacity: 0;
@@ -115,8 +145,6 @@ button:focus-visible {
 .itemCardContent:hover p {
   filter: brightness(100%);
 }
-
-
 
 
 .itemCardImg{
@@ -138,5 +166,474 @@ button:focus-visible {
       border: 0;
       background-color: rgb(0 0 0 / 2%);
     }
+  }
+}
+
+.searchItemWrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.searchItem{
+  max-width: 1500px;
+}
+
+.searchItem__background{
+  width: 100%;
+  height: 483px;
+  border-radius: 16px;
+  object-fit: cover;
+  filter: blur(5px);
+}
+
+.searchItemContent{
+  background-color: white;
+  border: solid 2px black;
+  height: auto;
+  padding-bottom: 20px;
+}
+
+.searchItemContent__details{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.searchItemContent__main{
+  margin-top: -20%;
+  display: flex;
+  align-items: flex-start;
+}
+
+.searchItemContent__main-poster{
+  z-index: 1;
+  height: 571px;
+  aspect-ratio: 380/571;
+  object-fit: cover;
+}
+
+.searchItemContent__main-title{
+  max-height: 168px;
+  max-width: 500px;
+  width: 40%;
+  border: solid 3px black;
+  position: absolute;
+  border-radius: 30px;
+  background-color: white;
+  margin-left: 450px;
+  margin-top: 80px;
+  padding: 10px;
+}
+
+.searchItemContent__main-type{
+  aspect-ratio: 200/57;
+  width: 200px;
+  position: absolute;
+  margin-left: 1050px;
+  margin-top: 130px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px 0px 6px 6px;
+  border: solid 2px black;
+}
+
+.searchItemContent__options{
+  width: 64%;
+  display: flex;
+  flex-direction: column;
+}
+
+.searchItemContent__options-item{
+  width: 100%;
+  background-color:rgba(239, 239, 239, 1) ;
+  display: flex;
+  height: 70px;
+}
+
+.searchItemContent__options-name{
+  width: 100%;
+  border: solid 1px black;
+  border-top: none;
+  border-left: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.searchItemContent__info{
+  margin-right: auto;
+  margin-left: 40px;
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.searchItemContent__info-item{
+  display: flex;
+  padding-bottom: 15px;
+  flex-wrap: wrap;
+}
+
+.searchItemContent__description{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.searchItemToggles{
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+  margin-bottom: 40px;
+}
+
+.searchItemBottomSection{
+  width: 90%;
+}
+
+.commentSection{
+  display: flex;
+  flex-direction: column; 
+}
+
+.commentSectionComment{
+  min-width: 200px;
+  /* width: auto; */
+  background-color: white;
+  display: flex;
+  border-radius: 30px;
+  border: solid 1.6px black;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+
+.commentSectionComment__user{
+  display: flex;
+  justify-content: center;
+  margin-right: 10px;
+}
+
+.commentSectionComment__user-info{
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.discussSection{
+  display: flex;
+  flex-direction: column;
+}
+
+.discussSection__inputs{
+  display: flex;
+  justify-content: space-around;
+}
+
+.discussModal{
+  border: solid 5px #7b7eb4;
+  border-radius: 18px;
+  background-color: white;
+  width: 60%;
+  padding: 20px;
+  height: auto;
+  max-height: 80%;
+  position: absolute;
+  overflow: scroll;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+}
+
+.discussLink{
+  max-width: 100%;
+  background-color: white;
+  min-height: 140px;
+  border: solid 3px black;
+  border-radius: 30px;
+  padding: 20px;
+  margin: 20px;
+}
+
+.discussItem{
+  height: auto;
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.discussItemTitle{
+  max-width: 100%;
+  background-color: white;
+  min-height: 140px;
+  border: solid 3px black;
+  border-radius: 30px;
+  padding: 20px;
+  margin: 20px;
+  display: flex;
+}
+
+.discussItemTitle__user{
+  display: flex;
+  align-items: center;
+}
+
+.discussItemTitle__user-profile{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.listWindowWrapper{
+  width: 80%;
+  max-width: 1300px;
+  min-height: 500px;
+  background-color: white;
+  border-radius: 24px;
+  border: solid 1px black;
+}
+
+.listWindowWrapper-types{
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  padding: 12px;
+}
+
+.listWindow{
+  display: flex;
+}
+
+.listWindowCards{
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin-left: 40px;
+}
+
+.listWindowTogglesSection{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+}
+
+.listWindowToggleGroup{
+  display: flex;
+  flex-direction: column;
+}
+
+.listWindowToggleButton{
+  max-width: 200px;
+  height: auto;
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
+  margin-bottom: 20px;
+}
+
+.sectionToggleSettings{
+  width: 40%;
+  min-height: 30%;
+  background-color: white;
+  position: absolute;
+  top: 35%;
+  left: 30%;
+  border: 2px solid black;
+  box-shadow: 24;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.sectionToggleSettings-inputs{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sectionToggleSettings-inputs__buttons{
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  padding: 12px;
+  flex-wrap: wrap;
+}
+
+
+
+.welcomePaper{
+  width: 50%;
+  padding: 12px;
+  border: solid 2px black;
+  border-radius: 40px;
+  background-color: white;
+}
+
+.welcomePaper-about{
+  margin-bottom: 80px;
+  margin-top: 78px;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 630px;
+}
+
+.welcomeTextField{
+  font-size: 44px;
+}
+
+.welcomeOpportunitiesItem{
+  margin-top: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+
+}
+
+.welcomeGif{
+  border: solid 1.5px #646cff;
+  border-radius: 16px;
+  max-width: 44%;
+}
+
+.welcomeTextField-about{
+  width: 30%;
+  background-color: white;
+  border-radius: 30px;
+  border: solid 3px black;
+}
+
+.welcomeTextField-about__end{
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 140px;
+  width: 50%;
+  padding: 12px;
+  border: solid 2px black;
+  border-radius: 40px;
+  background-color: white;
+}
+
+.postListWrapper{
+  width: 80%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.postItem{
+  width: 90%;
+  min-height: 150px;
+  background-color: white;
+  border: solid 1px black;
+  border-radius: 24px;
+  margin-bottom: 30px;
+  padding: 12px;
+}
+
+.postItemDetails{
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.postItemDetails-user{
+  display: flex;
+  align-items: flex-end;
+  padding: 10px;
+}
+
+.postItemDetails-user__info{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.postItemDetails-user__avatar{
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
+}
+
+.postItemImg{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  width: 80%;
+  max-height: 300px;
+  border-radius: 16px;
+  object-fit: contain;
+}
+
+.postItemAlso{
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  margin-left: 25px;
+  margin-bottom: 15px;
+}
+
+.addPostWrapper{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.addPost{
+  width: 60%;
+  background-color: white;
+  padding: 15px;
+}
+
+.addPostInputs{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.addPost__buttons{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 15px;
+}
+
+.hrHorizontal{
+  border-top: 1px solid black;
+  color: black;
+  width: 100%;
+  margin: 0 auto;
+}
+
+@media (min-width: 320px) {
+  .welcomePaper{
+    width: 50%;
+    padding: 12px;
+    border: solid 2px black;
+    border-radius: 40px;
+    background-color:#747bff;
   }
 }
